--- a/views/pages/components/tabelaOfertas.jade
+++ b/views/pages/components/tabelaOfertas.jade
@@ -11,7 +11,7 @@ table(class='tableProdutos')
 	//Cada valor dos dados recebidos
 	each valor in lista
 		if (i >= 9)
-			-i=0
+			break()
 		else
 
 			//3 produtos por linha
