--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -10,14 +10,6 @@ block content
 			each msg in messages.erro
 				b= msg
 				br
-	
-	//GeoLocalização Google
-	script(src='/javascript/maps.js')
-	//CHAVE GOOGLEAPI
-	script(async defer  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRrW9xU9wXRS67yz-vGYPihbn2cUDsGhg&callback=initMap")
-	//Div para mostrar o mapa - INVISIVEL
-	div(id='map' class='divMaps' style='display:none')
-
 
 	div(class='divItens')
 		if (search)
@@ -28,8 +20,8 @@ block content
 			else
 				i(class='tituloItens') Nenhum item encontrado!
 		else
-			i(class='tituloItens') Mais buscados:
-			include components/inicial
+			i(class='tituloItens') Ofertas:
+			include components/tabelaOfertas
 			
 			
 
